--- a/public/style.css
+++ b/public/style.css
@@ -14,10 +14,19 @@ header {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  height: 50px;
 }
 
-header a {
+header nav
+{
+  width: 45%;
+  background-color: cornflowerblue;
 }
 
-.nav {
+.nav_header
+{
+  display: flex;
+  font-size: small;
+  list-style: none;
+  justify-content: space-around;
 }
