--- a/public/style.css
+++ b/public/style.css
@@ -12,23 +12,19 @@ body {
 header {
   display: flex;
   flex-direction: row;
-  justify-items: fle;
   width: 100%;
   justify-content: space-between;
-  height: 3.5em;
-
+  height: 5%;
 }
 
-.logo_main
-{
+.logo_main {
   align-self: flex-end;
 }
 
-.nav_header
-{
-  width: 50%;
+.nav_header {
+  width: 35%;
   display: flex;
-  font-size: small;
+  font-size: 0.9em;
   list-style: none;
   justify-content: space-around;
   margin-block: unset;
@@ -38,28 +34,55 @@ header {
   height: 90%;
 }
 
-.nav_header a
-{
+.nav_header a {
   text-decoration: none;
   font-weight: 600;
-  color:#8d8d8d
+  color: #8d8d8d;
 }
 
-.li_1 a, .li_3 a
-{
-  color: #0065FC;
+.li_1 a,
+.li_3 a {
+  color: #0065fc;
 }
-.li_3 a
-{
+.li_3 a {
   font-weight: bolder;
 }
-.li_1
-{
-  border-top: 0.15em solid #0065FC;
-  padding-top: 1.10em;
+.li_2 {
+  border-top: 0.15em solid #0065fc;
+  padding-top: 1.1em;
 }
 
-.li_2,.li_3
-{
+.li_1,
+.li_3 {
   padding-top: 1.25em;
+}
+
+.section1 {
+  height: 15%;
+  width: 100%;
+  background-color: rgba(137, 43, 226, 0.267);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.titre1 {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(165, 42, 42, 0.459);
+}
+
+.recherche {
+  display: flex;
+  flex-direction: column;
+}
+
+h1,
+h2 {
+  font-size: 1.2em;
+}
+
+.titre1 p {
+  margin-top: 0;
+  font-size: 0.9em;
 }
