--- a/public/style.css
+++ b/public/style.css
@@ -39,7 +39,7 @@ header {
 .nav_header a {
   text-decoration: none;
   font-weight: 600;
-  color: #a5a5a5;
+  color: black;
 }
 
 .li_1 a,
@@ -102,26 +102,67 @@ h2 {
   margin-block: unset;
   margin-inline: unset;
   width: fit-content;
-  border: transparent solid 1px;
   display: flex;
-  border-radius: 10px;
+  margin-bottom: 2em;
 }
 
 .recherche form label {
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 6px;
-  padding-bottom: 6px;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 0.8em;
+  padding-bottom: 0.8em;
+  background-color: #f2f2f2;
+  border: 1px #f2f2f2 solid;
+  border-top-left-radius: 1em;
+  border-bottom-left-radius: 1em;
 }
 
 input[type="submit"] {
   border: none;
   background-color: #0065fc;
   color: white;
-  border-top-right-radius: inherit;
-  border-bottom-right-radius: inherit;
+  border-top-right-radius: 1em;
+  border-bottom-right-radius: 1em;
 }
 
 input[type="text"] {
-  border: none;
+  border-bottom: 1px #f2f2f2 solid;
+  border-top: 1px solid #f2f2f2;
+  border-left: none;
+  border-right: none;
+}
+
+.filtres {
+  display: flex;
+  align-items: center;
+}
+
+.filtres a {
+  margin-left: 3em;
+  margin-right: 3em;
+  display: flex;
+  height: fit-content;
+  justify-content: space-between;
+  text-decoration: none;
+  align-items: center;
+  border: 3px #f2f2f2 solid;
+  border-radius: 2em;
+}
+
+.filtres a i {
+  color: #0065fc;
+  background-color: #deebff;
+  border: #deebff solid 2px;
+  border-radius: 2em;
+  width: 2em;
+  height: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.filtres a div {
+  color: black;
+  font-weight: 550;
+  padding-left: 0.8em;
 }
