--- a/public/style.css
+++ b/public/style.css
@@ -18,10 +18,10 @@ header {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  width: 95%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 1%;
+  margin-top: 2%;
   margin-bottom: 2%;
 }
 
@@ -61,18 +61,18 @@ header {
 
 .section1 {
   height: 15%;
-  width: 95%;
+  width: 90%;
   margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-bottom: 3%;
+  margin-bottom: 4%;
 }
 
 .titre1 {
   display: flex;
   flex-direction: column;
-  margin-bottom: 1%;
+  margin-bottom: 2%;
 }
 
 .recherche {
@@ -114,7 +114,7 @@ h2 {
   margin-inline: unset;
   width: fit-content;
   display: flex;
-  margin-bottom: 1%;
+  margin-bottom: 2%;
   font-size: 105%;
   height: 2.5em;
 }
@@ -161,24 +161,22 @@ input[type="submit"] {
 .filtres {
   display: flex;
   align-items: center;
-  display: flex;
-  align-items: center;
-  width: 50%;
-  justify-content: space-around;
+  width: 52%;
+  justify-content: space-between;
+  margin-bottom: 2%;
 }
 
 .filtres a {
-  margin-left: 2%;
-  margin-right: 2%;
+  margin-left: 0%;
+  margin-right: 0%;
   display: flex;
-  /* height: fit-content; */
   justify-content: space-between;
   text-decoration: none;
   align-items: center;
   border: 2px #f2f2f2 solid;
   border-radius: 2em;
   height: 100%;
-  font-size: 100%;
+  font-size: 145%;
 }
 
 .filtres a:hover > i {
@@ -202,6 +200,7 @@ input[type="submit"] {
   align-items: center;
   justify-content: center;
   margin: -0.5%;
+  font-size: 80%;
 }
 
 .filtres a div {
@@ -209,6 +208,7 @@ input[type="submit"] {
   font-weight: 550;
   padding-left: 0.8em;
   padding-right: 0.8em;
+  font-size: 75%;
 }
 
 .filtres h3 {
@@ -220,8 +220,7 @@ input[type="submit"] {
 /*info logements disponibles*/
 
 .nblogements {
-  font-size: 0.9em;
-  margin-top: 1.8em;
+  font-size: 1em;
   display: flex;
   align-items: center;
 }
@@ -246,7 +245,8 @@ input[type="submit"] {
   flex-direction: column;
   justify-content: flex-start;
   width: 60%;
-  margin-left: 2.5%;
+  margin-left: 5%;
+  background: #f2f2f2;
 }
 
 .section2 h2 {
@@ -256,15 +256,16 @@ input[type="submit"] {
 .logements {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 4%;
-  justify-content: space-around;
-  width: 90%;
+  margin-bottom: 2%;
+  justify-content: space-between;
+  width: 95%;
   font-size: 125%;
 }
 .logements a {
   text-decoration: none;
   width: 25%;
   margin: 2%;
+  margin-bottom: 3%;
 }
 .logements a div {
   display: flex;
@@ -276,15 +277,16 @@ input[type="submit"] {
   margin-block-end: unset;
   margin-inline-start: unset;
   margin-inline-end: unset;
-  border: solid #f2f2f2 2px;
+  border: solid #f2f2f2 2.5px;
   border-radius: 2em;
   box-shadow: 1px 2px 20px rgb(199, 199, 199);
+  height: 100%;
 }
 
-.logements a img {
+.logements img {
   object-fit: cover;
-  height: 10em;
-  margin-bottom: 1em;
+  height: 50%;
+  margin-bottom: 4%;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
 }
@@ -294,10 +296,10 @@ input[type="submit"] {
   margin-block-end: unset;
   margin-inline-start: unset;
   margin-inline-end: unset;
-  margin-bottom: 0.5em;
-  padding-left: 0.5em;
-  font-size: 1.4em;
-  font-weight: 700;
+  margin-bottom: 2%;
+  padding-left: 5%;
+  font-size: 1.85em;
+  font-weight: 750;
 }
 
 .logements h3 + p {
@@ -305,9 +307,9 @@ input[type="submit"] {
   margin-block-end: unset;
   margin-inline-start: unset;
   margin-inline-end: unset;
-  margin-bottom: 0.5em;
-  padding-left: 0.6em;
-  font-size: 1.2em;
+  margin-bottom: 4%;
+  padding-left: 5%;
+  font-size: 1.8em;
   text-decoration: none;
 }
 
@@ -318,9 +320,9 @@ input[type="submit"] {
   margin-inline-end: unset;
   display: flex;
   color: #0065fc;
-  margin-bottom: 0.8em;
-  padding-left: 0.5em;
-  font-size: 1.4em;
+  margin-bottom: 0%;
+  padding-left: 4%;
+  font-size: 1.6em;
   text-decoration: none;
 }
 
@@ -331,7 +333,7 @@ input[type="submit"] {
 .afficherplus {
   text-decoration: none;
   color: black;
-  font-size: 0.8em;
+  font-size: 1.2em;
   margin-left: 1.4em;
   font-weight: 700;
 }
