--- a/public/style.css
+++ b/public/style.css
@@ -7,9 +7,6 @@ body {
   font-family: "Raleway", Arial, serif;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
-  width: 100%;
-  margin: auto;
 }
 
 /*HEADER*/
@@ -38,17 +35,23 @@ header {
   align-items: flex-end;
 }
 
+.li_1,
+.li_2,
+.sinscrire {
+  width: 100%;
+}
 .li_1 a,
 .li_2 a {
   text-decoration: none;
   font-weight: 600;
   color: black;
+  padding: 0 8% 0 8%;
 }
 .li_1 a:hover,
 .li_2 a:hover {
   color: #0065fc;
   border-top: 0.15em solid #0065fc;
-  padding-top: 1.15em;
+  padding-top: 29%;
 }
 
 .sinscrire a {
@@ -253,63 +256,64 @@ input[type="submit"] {
   margin-bottom: 2%;
 }
 
-.logements {
+.cards {
   display: flex;
   flex-wrap: wrap;
   margin-bottom: 2%;
-  justify-content: space-between;
-  width: 95%;
-  font-size: 125%;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
-.logements a {
+
+.card_a {
   text-decoration: none;
-  width: 25%;
   margin: 2%;
-  margin-bottom: 3%;
+  width: 28%;
 }
-.logements a div {
-  display: flex;
-  flex-direction: column;
-  font-size: 0.5em;
-  text-decoration: none;
+
+.card {
   color: black;
-  margin-block-start: unset;
-  margin-block-end: unset;
-  margin-inline-start: unset;
-  margin-inline-end: unset;
   border: solid #f2f2f2 2.5px;
   border-radius: 2em;
   box-shadow: 1px 2px 20px rgb(199, 199, 199);
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-self: flex-start;
 }
 
-.logements img {
+.card_img {
+  padding-bottom: 1%;
+}
+
+.card_img img {
+  border: transparent solid 1px;
+  border-radius: 2em 2em 0 0;
   object-fit: cover;
-  height: 50%;
-  margin-bottom: 4%;
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
+  height: 100px;
+  width: 100%;
 }
 
-.logements h3 {
+.card_container {
+  padding: 0 0 3% 4%;
+}
+
+.cards h3 {
   margin-block-start: unset;
   margin-block-end: unset;
   margin-inline-start: unset;
   margin-inline-end: unset;
   margin-bottom: 2%;
-  padding-left: 5%;
-  font-size: 1.85em;
+  font-size: 1.2em;
   font-weight: 750;
 }
 
-.logements h3 + p {
+.cards h3 + p {
   margin-block-start: unset;
   margin-block-end: unset;
   margin-inline-start: unset;
   margin-inline-end: unset;
   margin-bottom: 4%;
-  padding-left: 5%;
-  font-size: 1.8em;
+  font-size: 1em;
   text-decoration: none;
 }
 
@@ -321,20 +325,18 @@ input[type="submit"] {
   display: flex;
   color: #0065fc;
   margin-bottom: 0%;
-  padding-left: 4%;
-  font-size: 1.6em;
+  font-size: 1em;
   text-decoration: none;
 }
 
 .fas.fa-star.gris {
-  color: #f2f2f2;
+  color: #b9b9b9;
 }
 
 .afficherplus {
   text-decoration: none;
   color: black;
   font-size: 1.2em;
-  margin-left: 1.4em;
   font-weight: 700;
 }
 
