--- a/public/style.css
+++ b/public/style.css
@@ -518,3 +518,21 @@ input[type="submit"] {
   margin-left: 7%;
   font-size: 1.2em;
 }
+
+/*------------------------------------------------------------
+------------------------FOOTER-------------------------------
+------------------------------------------------------------*/
+
+#footer {
+  background-color: #f2f2f2;
+  margin-left: -2.7%;
+  margin-right: -2.7%;
+  display: flex;
+  align-items: center;
+  padding: 4%;
+}
+
+.footer_div {
+  width: 15%;
+  margin: 0 5% 0 5%;
+}
