--- a/public/style.css
+++ b/public/style.css
@@ -30,43 +30,41 @@ body {
   margin-left: 2%;
 }
 
-.nav_header {
-  width: 35%;
+.header-right {
   display: flex;
-  font-size: 1em;
-  list-style: none;
-  justify-content: space-between;
-  margin-block: unset;
-  margin-inline: unset;
-  padding-inline: unset;
-  margin-bottom: 1%;
+  justify-content: flex-end;
   align-items: flex-end;
+  width: 35%;
+  margin-right: 5%;
 }
 
-.li_1,
-.li_2,
-.sinscrire {
-  width: 30%;
-  text-align: center;
+.nav {
+  display: flex;
+  justify-content: flex-end;
+  align-items: baseline;
 }
-.li_1 a,
-.li_2 a {
-  text-decoration: none;
-  font-weight: 600;
+
+.nav a {
+  margin-right: 80%;
   color: black;
-  padding: 0 8% 0 8%;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+.sinscrire {
+  text-decoration: none;
+  color: #0065fc;
+  font-weight: 800;
+}
+
+.nav a:hover {
+  color: #0065fc;
 }
 .li_1 a:hover,
 .li_2 a:hover {
   color: #0065fc;
   border-top: 0.15em solid #0065fc;
   padding-top: 28%;
-}
-
-.sinscrire a {
-  color: #0065fc;
-  font-weight: 800;
-  text-decoration: none;
 }
 
 /*------------------------------------------------------------
@@ -105,7 +103,7 @@ body {
 
 h1,
 h2 {
-  font-size: 1.6em;
+  font-size: 1.6rem;
   font-weight: 750;
   margin-block: unset;
   margin-inline: unset;
@@ -455,6 +453,7 @@ input[type="submit"] {
 .activities {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   width: 100%;
   margin: 2% 0 2% 0;
 }
