--- a/public/style.css
+++ b/public/style.css
@@ -12,9 +12,10 @@ body {
   margin: auto;
 }
 
-#header,
+/* #header,
 #sections {
-}
+} */
+
 /*------------------------------------------------------------
 -------------------------HEADER-------------------------------
 ------------------------------------------------------------*/
@@ -24,42 +25,51 @@ body {
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  width: auto;
+  width: 100%;
+  padding-bottom: 2%;
+}
+#logo_main {
   margin-top: 2%;
-  margin-bottom: 2%;
   margin-left: 2%;
 }
-
 .header-right {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: flex-end;
   width: 35%;
-  margin-right: 5%;
 }
 
 .nav {
   display: flex;
-  justify-content: flex-end;
-  align-items: baseline;
+  justify-content: space-around;
+  align-items: flex-end;
+  width: 60%;
 }
 
 .nav a {
-  margin-right: 80%;
   color: black;
   text-decoration: none;
   font-weight: 700;
+  padding: 10% 2% 0 2%;
+  font-size: 1.2rem;
 }
 
 .sinscrire {
   text-decoration: none;
   color: #0065fc;
-  font-weight: 800;
+  font-weight: 700;
+  width: 20%;
+  margin-left: 7%;
+  font-size: 1.2rem;
 }
 
-.nav a:hover {
+.nav-hébergements:hover,
+.nav-activités:hover {
   color: #0065fc;
+  border-top: #0065fc 0.2rem solid;
+  padding-top: -2%;
 }
+
 .li_1 a:hover,
 .li_2 a:hover {
   color: #0065fc;
@@ -270,14 +280,14 @@ input[type="submit"] {
   margin-top: 1.5%;
   margin-right: 0;
   margin-left: 2%;
-  margin-bottom: 4%;
+  margin-bottom: 2%;
 }
 
 .cards {
   display: flex;
   flex-wrap: wrap;
   margin-top: 1%;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
   justify-content: space-between;
   align-items: flex-start;
 }
@@ -364,7 +374,7 @@ input[type="submit"] {
   flex-direction: column;
   width: 25%;
   margin-top: 1.5%;
-  margin-bottom: 4%;
+  margin-bottom: 2%;
   margin-right: 0%;
   margin-left: 2%;
   background-color: #f2f2f2;
@@ -442,12 +452,12 @@ input[type="submit"] {
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-left: 2%;
-  margin-right: 2%;
+  margin: 2% 2%;
 }
 
 #title_actvities {
   margin-left: 1%;
+  margin-bottom: 2%;
 }
 
 .activities {
@@ -455,21 +465,20 @@ input[type="submit"] {
   justify-content: space-between;
   flex-wrap: wrap;
   width: 100%;
-  margin: 2% 0 2% 0;
 }
 
 .activities1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-right: 1%;
+  width: 50%;
 }
 
 .activities2 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin-left: 1%;
+  width: 50%;
 }
 
 .activities1 a,
@@ -478,14 +487,13 @@ input[type="submit"] {
 }
 
 .activity_big {
-  width: 45%;
-  margin-right: 5%;
+  width: 42%;
 }
 
 .activities_SetM {
   display: flex;
   flex-direction: column;
-  width: 45%;
+  width: 48%;
   justify-content: space-between;
 }
 
@@ -559,7 +567,7 @@ input[type="submit"] {
 }
 
 .footer_div h2 {
-  font-size: 1.3em;
+  font-size: 1.1rem;
   margin-block: unset;
   padding-inline: unset;
   margin-bottom: 1.2rem;
@@ -567,7 +575,7 @@ input[type="submit"] {
 
 .footer_div a {
   width: auto;
-  font-size: 1.2em;
+  font-size: 1.1rem;
   margin-bottom: 0.8rem;
   text-decoration: none;
   list-style: none;
